Eerste map helemaal afgemaakt

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,13 +6,15 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Dungeon.Dungeon
 LocalMapOptions=
-TransitionMap=
+TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Dungeon.Dungeon
-ServerDefaultMap=/Engine/Maps/Entry
+ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
 
